--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+dev = ["bevy/dynamic"]
+
 [dependencies]
 bevy = "0.8.0"
 rand = "0.8.5"
